# -douyin-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml
douyin-video/scripts/: bilibili_downloader.py  douyin_downloader.py  transcriber.py  video_router.py
douyin_mcp_server/: __init__.py  server.py
web/: app.py
web/templates/: index.html
