[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "douyin-mcp-server"
version = "2.0.0"
description = "MCP server for downloading Douyin/Bilibili videos and extracting text"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests",
    "ffmpeg-python",
    "tqdm",
    "dashscope",
    "yt-dlp>=2024.0.0",
]

[project.optional-dependencies]
web = [
    "fastapi",
    "uvicorn",
    "jinja2",
]

[project.urls]

[project.scripts]
douyin-mcp-server = "douyin_mcp_server.server:main"